--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://daranzolin.github.io"
+baseurl = "https://davidranzolin.github.io"
 languageCode = "en-us"
 title = "davidranzolin.github.io"
 # Enable comments by entering your Disqus shortname
